--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-	<h1>Lê Thành Phước</h1>
+	<h1>Lê Thành Phước <br>
+		<img src="images/01.png" alt=""> </h1>
+
+	<hr>
 	<div class="thongtin">
 		<b>Tên:</b> <i>Lê Thành Phước</i>	
 	</div>
