--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Lê Thành Phước <br>
-		<img src="images/01.png" alt=""> </h1>
+		<img src="images/01.PNG" alt=""> </h1>
 
 	<hr>
 	<div class="thongtin">
