--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
+	<a href="index.html">Trang chủ</a>
+	<a href="gallery.html">Gallery</a>
 	<h1>Lê Thành Phước <br>
 		<img src="images/01.PNG" alt=""> </h1>
 
 	<hr>
+
 	<div class="thongtin">
 		<b>Tên:</b> <i>Lê Thành Phước</i>	
 	</div>
