--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Gallery</title>
+	<link rel="stylesheet" href="1.css">
 </head>
 <body>
 	<div class="menu">
