--- a/webcongty/index.html
+++ b/webcongty/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div class="menu">
-		<a href="index.html">Trang chủ</a>
-	<a href="gallery.html">Gallery</a>
+		<a href="../index.html">Trang chủ</a>
+	<a href="../gallery.html">Gallery</a>
 	</div>
 	<h1>Đây là web công ty</h1>
 </body>
