--- a/index.html
+++ b/index.html
@@ -27,22 +27,14 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Kinh nghiệm</a>
 		      </li>
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Sản phẩm
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">Action</a>
-		          <a class="dropdown-item" href="#">Another action</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Something else here</a>
-		        </div>
-		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Thông tin liên hệ</a>
+		        <a class="nav-link" href="#">Sản phẩm</a>
 		      </li>
-		        <li class="nav-item">
-		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Comment</a>
+		    <li class="nav-item">
+		        <a class="nav-link" href="#">Thông tin liên hệ</a>
+		      </li>
+		         <li class="nav-item">
+		        <a class="nav-link" href="#">Comment</a>
 		      </li>
 		      
 		    </ul>
