--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body >
 	<div class="menutop">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
 		  <div class="container">
 		  <a class="navbar-brand" href="#"><img src="images/logo.PNG" alt="logo phuoclethanh"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +45,9 @@
 		  </div>
 		</div> <!-- het container -->
 		</nav>
+	</div> <!-- het menutop -->
+	<div class="khoitt1">
+		
 	</div>
 </body>
 </html>
