update thong tin

--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
 		</nav>
 	</div> <!-- het menutop -->
 	<div class="khoitt1">
+		<div class="container text-center">
+			<div class="tt">
+				<img src="images/avatar.png" alt="avatar phuoclethanh">
+				<h2>Lê Thành Phước</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet at, esse nihil neque ullam illum ducimus quas recusandae</p>
+				<a href="" class="nuthire btn btn-primary">Hợp tác</a>
+			</div>
+			
+		</div>
 		
-	</div>
+	</div> <!-- het khoitt1 -->
 </body>
 </html>
