--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
  	<link rel="stylesheet" href="1.css">
 </head>
 <body >
+
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0&appId=819824321917570&autoLogAppEvents=1" nonce="s04LfRhy"></script>
+
 	<div class="menutop">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		  <div class="container">
@@ -191,5 +195,20 @@
 			</div>
 		</div>
 	</div> <!-- het sp -->
+
+	<div class="khoicomment">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1 class="text-center">
+						Phản hồi
+					</h1>
+					<div class="commentfacebook">
+						<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
