--- a/index.html
+++ b/index.html
@@ -198,15 +198,16 @@
 
 	<div class="khoicomment">
 		<div class="container">
-			<div class="row">
+			<div class="row text-center">
 				<div class="col-sm-12">
-					<h1 class="text-center">
+					<h2 class="text-center">
 						Phản hồi
-					</h1>
-					<div class="commentfacebook">
-						<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
-					</div>
+					</h2>
+				</div>	
+				<div class="col-sm-8 offset-2">
+					<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
 				</div>
+				
 			</div>
 		</div>
 	</div>
