--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		        <a class="nav-link" href="#">Thông tin liên hệ</a>
 		      </li>
 		         <li class="nav-item">
-		        <a class="nav-link" href="#">Comment</a>
+		        <a class="nav-link cm" href="#">Comment</a>
 		      </li>
 		      
 		    </ul>
@@ -196,7 +196,7 @@
 		</div>
 	</div> <!-- het sp -->
 
-	<div class="khoicomment">
+	<div class="phanhoi" id="phanhoi">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-12">
