--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="menutop">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		  <div class="container">
-		  <a class="navbar-brand" href="#"><img src="images/logo.PNG" alt="logo phuoclethanh"></a>
+		  <a class="navbar-brand" href="index.html"><img src="images/logo.PNG" alt="logo phuoclethanh"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -35,7 +35,7 @@
 		        <a class="nav-link sp" href="#">Sản phẩm</a>
 		      </li>
 		    <li class="nav-item">
-		        <a class="nav-link" href="#">Thông tin liên hệ</a>
+		        <a class="nav-link" href="lienhe.html">Thông tin liên hệ</a>
 		      </li>
 		         <li class="nav-item">
 		        <a class="nav-link cm" href="#">Comment</a>
