update thong tin lien he

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		  <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent"> <!--  flex-grow-0 -->
 		    <ul class="navbar-nav mr-auto">  <!-- mr-auto -->
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Giới thiệu <span class="sr-only">(current)</span></a>
+		        <a class="nav-link gt" href="#">Giới thiệu <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link kn" href="#">Kinh nghiệm</a>
@@ -35,7 +35,7 @@
 		        <a class="nav-link sp" href="#">Sản phẩm</a>
 		      </li>
 		    <li class="nav-item">
-		        <a class="nav-link" href="lienhe.html">Thông tin liên hệ</a>
+		        <a class="nav-link" href="#">Thông tin liên hệ</a>
 		      </li>
 		         <li class="nav-item">
 		        <a class="nav-link cm" href="#">Comment</a>
@@ -50,7 +50,7 @@
 		</div> <!-- het container -->
 		</nav>
 	</div> <!-- het menutop -->
-	<div class="khoitt1">
+	<div class="khoitt1" id="khoigt">
 		<div class="container text-center">
 			<div class="tt">
 				<img src="images/avatar.png" alt="avatar phuoclethanh">
@@ -196,13 +196,29 @@
 		</div>
 	</div> <!-- het sp -->
 
+	<div class="thongtinlienhe">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 tieudeto text-center">
+					<h1 class="text-center">Thông tin liên hệ</h1>
+				</div>
+				<div class="col-sm-12 text-center tt">
+					<p>Điện thoại: 098xxxxxxx</p>
+					<p>Facebook: thanhphuoc.le.23</p>
+				</div>
+			</div>
+			
+			
+		</div>
+	</div>
+
 	<div class="phanhoi" id="phanhoi">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-sm-12">
-					<h2 class="text-center">
+				<div class="col-sm-12 tieudeto">
+					<h1 class="text-center">
 						Phản hồi
-					</h2>
+					</h1>
 				</div>	
 				<div class="col-sm-8 offset-2">
 					<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
@@ -210,6 +226,6 @@
 				
 			</div>
 		</div>
-	</div>
+	</div> <!-- het phan hoi -->
 </body>
 </html>
