update thong tin lien he

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		        <a class="nav-link sp" href="#">Sản phẩm</a>
 		      </li>
 		    <li class="nav-item">
-		        <a class="nav-link" href="#">Thông tin liên hệ</a>
+		        <a class="nav-link ttlh" href="#">Thông tin liên hệ</a>
 		      </li>
 		         <li class="nav-item">
 		        <a class="nav-link cm" href="#">Comment</a>
@@ -196,7 +196,7 @@
 		</div>
 	</div> <!-- het sp -->
 
-	<div class="thongtinlienhe">
+	<div class="thongtinlienhe" id="khoittlienhe">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 tieudeto text-center">
