--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 			<div class="tt">
 				<img src="images/avatar.png" alt="avatar phuoclethanh">
 				<h2>Lê Thành Phước</h2>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet at, esse nihil neque ullam illum ducimus quas recusandae</p>
-				<a href="" class="nuthire btn btn-primary">Hợp tác</a>
+				<p>Xin chào! Tôi là một frontend developer</p>
+				<a href="index.html" class="nuthire btn btn-primary">Hợp tác</a>
 			</div>
 			<div class="xuong"></div>
 		</div>
