update kinh nghiem

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 						</span>
 						<p>Lập trình PLC, SCADA, HMI</p>
 					</div>
-					<div class="khoittnho text-sm-left text-center">
+					<!-- <div class="khoittnho text-sm-left text-center">
 						<h3 class="tieudecap3">Phụ trách tổ điện nước</h3>
 						<span class="motaqt">
 							10/2020 – 11/2020: Công ty cổ phần nông nghiệp Trường Hải
 						</span>
 						<p>Lắp đặt hệ thống tưới nước. Bảo trì, động cơ, bơm định kỳ</p>
-					</div>
+					</div> -->
 					
 
 				</div> <!-- het cot 4/3 -->
@@ -185,7 +185,7 @@
 					<h1 class="text-center">Thông tin liên hệ</h1>
 				</div>
 				<div class="col-sm-12 text-center tt">
-					<p>Điện thoại: 098xxxxxxx</p>
+					<p>Điện thoại: (+84)981520599</p>
 					<p>Facebook: thanhphuoc.le.23</p>
 				</div>
 			</div>
