update san pham

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 			<div class="row">
 				<div class="col-sm-12 tieudeto text-center">
 					<h1>Sản phẩm</h1>
+					<br>
+					<i class="small">(Minh họa)</i>
+					
 				</div>
 				
 				<div class="col-sm-12 danhsach text-center">
