update gioi thieu

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div class="tt">
 				<img src="images/avatar.png" alt="avatar phuoclethanh">
 				<h2>Lê Thành Phước</h2>
-				<p>Xin chào! Tôi là một frontend developer</p>
+				<p>Xin chào! Đây là website cá nhân của tôi</p>
 				<a href="index.html" class="nuthire btn btn-primary">Hợp tác</a>
 			</div>
 			<div class="xuong"></div>
