--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project3</title>
+    <title>Login</title>
     <link rel="stylesheet" href="Project3_Mobile.css">
     <link rel="stylesheet" href="Project3_Tablet.css">
     <link rel="stylesheet" href="Project3_Desktop.css">
@@ -11,7 +11,7 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="#">Brand</a></li>
+            <li><a href="Project3.html">Brand</a></li>
             <li><a href="#">Browse</a></li>
             <li class="menu-d-t"><a href="#">Help</a></li>
             <li class="menu-d-t"><a href="Login.html">Log In</a></li>   
@@ -22,28 +22,8 @@
             <li class="menu-m"><a href="#">Help</a></li>     
         </ul>
     </div>
-    <div id="banner">
-        <img src="images/lodging.png" alt="banner-loding">
-        <h1>Find a place to say.</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p> 
-        <hr>  
-    </div>
     <div id="main-content">
-        <h2>Neighborhood Guides</h2>
-        <p>Not sure where to stay? We've created neighborhood guides for cities all around the world.</p>
-        <div class="row img-table">
-            <div class="col col-4 col-s-6">
-                <img src="images/mexico-city.png" alt="mexico-city">
-                <img src="images/ny.png" alt="newyork">
-            </div>
-            <div class="col col-4 col-s-6">
-                <img src="images/tokyo.png" alt="tokyo">
-                <img src="images/paris.png" alt="paris">
-            </div> 
-            <div class="col col-4 col-s-6">
-                <img src="images/invite.png" alt="invite"> 
-            </div> 
-        </div>       
+        <h2>This is Login Page</h2>      
     </div>
     <div id="footer" class="row">
         <div class="col col-4 col-s-12">
