--- a/SignUp.html
+++ b/SignUp.html
@@ -11,7 +11,7 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="Project3.html">Brand</a></li>
+            <li><a href="index.html">Brand</a></li>
             <li><a href="#">Browse</a></li>
             <li class="menu-d-t"><a href="#">Help</a></li>
             <li class="menu-d-t"><a href="Login.html">Log In</a></li>   
