--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project3</title>
+    <title>Project3 | Assignment3</title>
     <link rel="stylesheet" href="Project3_Mobile.css">
     <link rel="stylesheet" href="Project3_Tablet.css">
     <link rel="stylesheet" href="Project3_Desktop.css">
