--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="msvalidate.01" content="2227D663E553CA98406A7C330798331F" />
     <title>Project3 | Assignment3</title>
     <link rel="stylesheet" href="Project3_Mobile.css">
     <link rel="stylesheet" href="Project3_Tablet.css">
