--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msvalidate.01" content="2227D663E553CA98406A7C330798331F" />
-    <title>Project3 | Assignment3</title>
+    <title>Project3 | Assignment3 Web101x</title>
     <link rel="stylesheet" href="Project3_Mobile.css">
     <link rel="stylesheet" href="Project3_Tablet.css">
     <link rel="stylesheet" href="Project3_Desktop.css">
