--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-TVG5LLN');</script>
         <!-- End Google Tag Manager -->
-    Google adSense
+    <!-- Google adSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8907242515488849"
     crossorigin="anonymous"></script>
 </head>
