--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msvalidate.01" content="2227D663E553CA98406A7C330798331F" />
+    <meta name="description" content="Assignment3">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="PhuocLT">
     <title>Project3 | Assignment3 Web101x</title>
     <link rel="stylesheet" href="Project3_Mobile.css">
     <link rel="stylesheet" href="Project3_Tablet.css">
