--- a/index.html
+++ b/index.html
@@ -1,96 +1,192 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="msvalidate.01" content="2227D663E553CA98406A7C330798331F" />
-    <meta name="description" content="Assignment3">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
+<html lang="vn"><head>
+	<title> Danh lam thắng cảnh Quảng Trị </title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Danh lam thang canh Quang Tri">
+    <meta name="keywords" content="Quang Trị, Danh lam thang canh, Du lich">
     <meta name="author" content="PhuocLT">
-    <title>Project3 | Assignment3 Web101x</title>
-    <link rel="stylesheet" href="Project3_Mobile.css">
-    <link rel="stylesheet" href="Project3_Tablet.css">
-    <link rel="stylesheet" href="Project3_Desktop.css">
-    <!-- Hotjar Tracking Code for https://phuoclethanh.github.io/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:2761580,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-TVG5LLN');</script>
-        <!-- End Google Tag Manager -->
-    <!-- Google adSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8907242515488849"
-    crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/jquery-1.12.4.js"></script>
+	<script type="text/javascript" src="vendor/bootstrap.js"></script>
+	<link rel="stylesheet" href="vendor/bootstrap.css">
+ 	<link rel="stylesheet" href="index.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RW9PMXELT0"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-RW9PMXELT0');
+	</script>
 </head>
-<body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVG5LLN"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="menu">
-        <ul>
-            <li><a href="#">Brand</a></li>
-            <li><a href="#">Browse</a></li>
-            <li class="menu-d-t"><a href="#">Help</a></li>
-            <li class="menu-d-t"><a href="Login.html">Log In</a></li>   
-            <li class="menu-d-t"><a href="SignUp.html">Sign Up</a></li> 
-            <!-- mobile -->
-            <li class="menu-m"><a href="SignUp.html">Sign Up</a></li> 
-            <li class="menu-m"><a href="Login.html">Log In</a></li> 
-            <li class="menu-m"><a href="#">Help</a></li>     
-        </ul>
-    </div>
-    <div id="banner">
-        <img src="images/lodging.png" alt="banner-loding">
-        <h1>Find a place to say.</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p> 
-        <hr>  
-    </div>
-    <div id="main-content">
-        <h2>Neighborhood Guides</h2>
-        <p>Not sure where to stay? We've created neighborhood guides for cities all around the world.</p>
-        <div class="row img-table">
-            <div class="col col-4 col-s-6">
-                <img src="images/mexico-city.png" alt="mexico-city">
-                <img src="images/ny.png" alt="newyork">
-            </div>
-            <div class="col col-4 col-s-6">
-                <img src="images/tokyo.png" alt="tokyo">
-                <img src="images/paris.png" alt="paris">
-            </div> 
-            <div class="col col-4 col-s-6">
-                <img src="images/invite.png" alt="invite"> 
-            </div> 
-        </div>       
-    </div>
-    <div id="footer" class="row">
-        <div class="col col-4 col-s-12">
-            <h3>Travel</h3>
-            <p>From apartments and rooms to tree houses and boats: stay in unique spaces in 192 countries.</p>
-            <a href="#">See how to travel on Airbnb</a>
-        </div>
-        <div class="col col-4 col-s-12">
-            <h3>Host</h3>
-            <p>Renting out your unused space could pay your bills or fund your next vacation.</p>
-            <a href="#">Learn more about hosting</a>
-        </div>
-        <div class="col col-4 col-s-12">
-            <h3>Trust and Safety</h3>
-            <p>From Verified ID to our worldwide customer support team, we've got your back.</p>
-            <a href="#">Learn about trust a Airbnb</a>
-        </div>
-    </div>
-    <script>!function(s,u,b,i,z){var o,t,r,y;s[i]||(s._sbzaccid=z,s[i]=function(){s[i].q.push(arguments)},s[i].q=[],s[i]("setAccount",z),r=["widget.subiz.net","storage.googleapis"+(t=".com"),"app.sbz.workers.dev",i+"a"+(o=function(k,t){var n=t<=6?5:o(k,t-1)+o(k,t-3);return k!==t?n:n.toString(32)})(20,20)+t,i+"b"+o(30,30)+t,i+"c"+o(40,40)+t],(y=function(k){var t,n;s._subiz_init_2094850928430||r[k]&&(t=u.createElement(b),n=u.getElementsByTagName(b)[0],t.async=1,t.src="https://"+r[k]+"/sbz/app.js?accid="+z,n.parentNode.insertBefore(t,n),setTimeout(y,2e3,k+1))})(0))}(window,document,"script","subiz", "acrezqymcpyvaeigasod")</script>
+<body >
+
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0&appId=819824321917570&autoLogAppEvents=1" nonce="s04LfRhy"></script>
+
+	<div id="menu">
+			<nav class="navbar navbar-expand-sm navbar-light bg-light">
+				<div class="container">
+					<a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="logo"></a>
+					<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+						aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="collapsibleNavId">
+						<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+							<li class="nav-item active">
+								<a class="nav-link" href="#">Trang chủ<span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="ditichlichsu.html">Di tích lịch sử</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="hangdongthac.html">Hang động - thác</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="bienbaitam.html">Biển - Bải tắm</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="dao.html">Đảo</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="khac.html">Khác</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+	</div>
+
+	<div id="banner">
+		<div id="carouselId" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselId" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselId" data-slide-to="1"></li>
+				<li data-target="#carouselId" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<div class="carousel-item active">
+					<img src="images/lavang.png" alt="la vang">
+					<div class="carousel-caption d-none d-md-block">
+						<h3 class="display-3">Thánh địa La Vang</h3>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="images/diengioHuonghoa.png" alt="huong hoa">
+					<div class="carousel-caption d-none d-md-block">
+						<h3 class="display-3">Điện gió Hướng Hóa</h3>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="images/hailangvedem.png" alt="hai lang ve dem">
+					<div class="carousel-caption d-none d-md-block">
+						<h3 class="display-3">Hải Lăng về đêm</h3>
+					</div>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
+	<div class="posts mt-5">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4 text-center mt-4">
+						<img src="images/thanh-co-quang-tri.jpg" class="img-fluid" alt="thanh co quang tri">
+						<h3 class="display-5 mt-2">Thành cổ Quảng Trị</h3>
+						<p class="text-justify">Thành Cổ Quảng Trị nằm bên dòng sông Thạch Hãn, được biết đến qua cuộc chiến 81 ngày đêm giữ thành đầy khốc liệt trong lịch sử dân tộc. Năm 1994, Thành Cổ Quảng Trị được xếp vào danh mục những di tích đặc biệt quan trọng.</p>
+				</div>
+				<div class="col-sm-4 text-center mt-4">
+						<img src="images/cau-hien-luong.jpg" class="img-fluid" alt="hien luong ben hai">
+						<h3 class="display-5 mt-2">Cầu Hiền Lương - sông Bến Hải</h3>
+						<p class="text-justify">Cầu Hiền Lương nằm ngay gần Quốc lộ 1A, tại đây bạn sẽ được nghe hướng dẫn viên giới thiệu chi tiết về cây cầu đặc biệt này. Cầu Hiền Lương được tái hiện lại màu sơn 2 màu có ngăn cách ở giữa như trong thời kỳ chiến tranh Việt Nam.</p>
+				</div>
+				<div class="col-sm-4 text-center mt-4">
+						<img src="images/dia-dao-vinh-moc.png" class="img-fluid" alt="dia dao vinh moc">
+					<h3 class="display-5 mt-2">Địa đạo Vịnh Mốc</h3>
+					<p class="text-justify">Địa đạo Vịnh Mốc ở Quảng Trị còn gọi là Địa đạo Vĩnh Mốc. Đây là công trình biểu tượng của hệ thống làng hầm Vĩnh Linh được mệnh danh là lũy thép. Vịnh Mốc còn giữ nguyên vẽ hoang sơ của nông thôn Việt Nam trong những năm chiến tranh chống Mỹ. Dưới những bụi tre là địa đạo rộng lớn nơi sinh hoạt của quân và dân Quảng Trị.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<main>
+		<div class="container">
+				<div class="col-sm-12 mt-3">
+					<hr>
+				</div>
+				<div class="col-sm-12">
+					<h5 class="display-4 mt-3 text-center">Quảng Trị</h5>
+				</div>
+				<div class="col-sm-12 text-center">
+					<figure>
+						<img class="img-fluid mt-3 mb-3 mx-auto d-block" src="images/bando_quangtri.jpg" alt="quang tri">
+						<figcaption>Bản đồ tỉnh Quảng Trị</figcaption>
+					</figure>
+				</div>
+				<div class="col-sm-12 text-justify mt-3 mb-3">
+					<p>
+						Quảng Trị là một tỉnh nằm ở dải đất miền Trung Việt Nam, nơi chuyển tiếp giữa hai miền địa lý Bắc - Nam. Tọa độ địa lý tỉnh Quảng Trị ở vào vị trí từ 16°18' đến 17°10' vĩ độ Bắc, 106°32' đến 107°34' kinh độ Đông. Nằm cách thủ đô Hà Nội 593 km về phía Nam, cách thành phố Đà Nẵng 178 km về phía Bắc. Có vị trí địa lý:
+					</p>
+					<p>
+						Phía bắc giáp tỉnh Quảng Bình.
+						Phía nam giáp tỉnh Thừa Thiên Huế.
+						Phía tây giáp 2 tỉnh Savannakhet và Saravane của Cộng hòa Dân chủ Nhân dân Lào.
+						Phía Đông giáp biển Đông.
+						Với tọa độ địa lý này, Quảng Trị được tạo nên bởi một không gian lãnh thổ mang sắc thái khí hậu nhiệt đới ẩm, điển hình của vòng đai nội chí tuyến Bắc bán cầu và chịu ảnh hưởng rất lớn của biển Đông.
+					</p>
+					<p>
+						Các điểm cực của tỉnh Quảng Trị:
+						Điểm cực bắc tại: thôn Mạch Nước, xã Vĩnh Thái, huyện Vĩnh Linh.
+						Điểm cực nam tại: bản A Ngo, xã A Ngo, huyện Đa Krông.
+						Điểm cực đông tại: thôn Thâm Khê, xã Hải Khê, huyện Hải Lăng.
+						Điểm cực tây tại: đồn biên phòng Cù Bai, xã Hướng Lập, huyện Hướng Hóa.
+						Chiều ngang trung bình của tỉnh 63,9 km, (chiều ngang rộng nhất 75,4 km, chiều ngang hẹp nhất 52,5 km).
+					</p>
+					<p>
+						Tuy với một diện tích không rộng, người không đông nhưng do nằm ở vị trí chiến lược quan trọng nên Quảng Trị đã và đang giữ vai trò trọng yếu trong việc bảo vệ và khai thác biển Đông, giao lưu giữa hai miền Bắc - Nam của đất nước cũng như lưu thông thuận lợi với các nước phía tây bán đảo Đông dương, các nước khác trong khu vực Đông Nam Á và thế giới qua cửa khẩu Lao Bảo - hành lang quốc lộ số 9 ra cảng Cửa Việt.
+					</p>	
+			</div>
+		</div>
+	</main>
+	<div class="feedback" id="feedback">
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-sm-12">
+					<h3 class="text-center">
+						Phản hồi
+					</h3>
+				</div>	
+				<div class="col-sm-8 offset-2">
+					<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-10 mt-3 mb-4">
+					<p class="text-center mb-0">Copyright © 2021. All Rights Reserved</p>
+				</div>
+				<div class="col sm-2">
+					<a href="https://www.facebook.com/thanhphuoc.le.23/" target="_blank" class="connect_link">
+						<img src="images/facebook.png" alt="facebook">
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<script>!function(s,u,b,i,z){var o,t,r,y;s[i]||(s._sbzaccid=z,s[i]=function(){s[i].q.push(arguments)},s[i].q=[],s[i]("setAccount",z),r=["widget.subiz.net","storage.googleapis"+(t=".com"),"app.sbz.workers.dev",i+"a"+(o=function(k,t){var n=t<=6?5:o(k,t-1)+o(k,t-3);return k!==t?n:n.toString(32)})(20,20)+t,i+"b"+o(30,30)+t,i+"c"+o(40,40)+t],(y=function(k){var t,n;s._subiz_init_2094850928430||r[k]&&(t=u.createElement(b),n=u.getElementsByTagName(b)[0],t.async=1,t.src="https://"+r[k]+"/sbz/app.js?accid="+z,n.parentNode.insertBefore(t,n),setTimeout(y,2e3,k+1))})(0))}(window,document,"script","subiz", "acrezqymcpyvaeigasod")</script>
 </body>
 </html>
