--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</script>
 </head>
 <body >
-
+	<!-- facebook comment -->
 	<div id="fb-root"></div>
 	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0&appId=819824321917570&autoLogAppEvents=1" nonce="s04LfRhy"></script>
 
@@ -168,6 +168,7 @@
 					</h3>
 				</div>	
 				<div class="col-sm-8 offset-2">
+					<!-- facebook comment -->
 					<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
 				</div>
 			</div>
