--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
 	<div class="feedback" id="feedback">
 		<div class="container">
 			<div class="row text-center">
+				<div class="col-sm-12 mt-3 m-3">
+					<hr>
+				</div>
 				<div class="col-sm-12">
 					<h3 class="text-center">
 						Phản hồi
