--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						Phản hồi
 					</h3>
 				</div>	
-				<div class="col-sm-8 offset-2">
+				<div class="col-sm-12">
 					<!-- facebook comment -->
 					<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
 				</div>
