--- a/ditichlichsu.html
+++ b/ditichlichsu.html
@@ -160,10 +160,10 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-10 mt-3 mb-3">
+				<div class="col-10 mt-3 mb-3">
 					<p class="text-center mb-0">Copyright © 2021. All Rights Reserved</p>
 				</div>
-				<div class="col sm-2">
+				<div class="col-2">
 					<a href="https://www.facebook.com/thanhphuoc.le.23/" target="_blank" class="connect_link">
 						<img src="images/facebook.png" alt="facebook">
 					</a>
