--- a/khac.html
+++ b/khac.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vn"><head>
+<html lang="vi"><head>
 	<title> Địa điểm khác</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
