--- a/index.html
+++ b/index.html
@@ -1,196 +1,54 @@
 <!DOCTYPE html>
-<html lang="vi"><head>
-	<title> Danh lam thắng cảnh Quảng Trị </title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Danh lam thang canh Quang Tri">
-    <meta name="keywords" content="Quang Trị, Danh lam thang canh, Du lich">
-    <meta name="author" content="PhuocLT">
-	<script type="text/javascript" src="js/jquery-1.12.4.js"></script>
-	<script type="text/javascript" src="vendor/bootstrap.js"></script>
-	<link rel="stylesheet" href="vendor/bootstrap.css">
- 	<link rel="stylesheet" href="index.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RW9PMXELT0"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-RW9PMXELT0');
-	</script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My News</title>
+    <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
-<body >
-	<!-- facebook comment -->
-	<div id="fb-root"></div>
-	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0&appId=819824321917570&autoLogAppEvents=1" nonce="s04LfRhy"></script>
-
-	<div id="menu">
-			<nav class="navbar navbar-expand-sm navbar-light bg-light">
-				<div class="container">
-					<a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="logo"></a>
-					<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="collapsibleNavId">
-						<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-							<li class="nav-item active">
-								<a class="nav-link" href="#">Trang chủ<span class="sr-only">(current)</span></a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="ditichlichsu.html">Di tích lịch sử</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="hangdongthac.html">Hang động - thác</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="bienbaitam.html">Biển - Bải tắm</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="dao.html">Đảo</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="khac.html">Khác</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-	</div>
-
-	<div id="banner">
-		<div id="carouselId" class="carousel slide" data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#carouselId" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselId" data-slide-to="1"></li>
-				<li data-target="#carouselId" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner" role="listbox">
-				<div class="carousel-item active">
-					<img src="images/lavang.png" alt="la vang">
-					<div class="carousel-caption d-none d-md-block">
-						<h3 class="display-3">Thánh địa La Vang</h3>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="images/diengioHuonghoa.png" alt="huong hoa">
-					<div class="carousel-caption d-none d-md-block">
-						<h3 class="display-3">Điện gió Hướng Hóa</h3>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="images/hailangvedem.png" alt="hai lang ve dem">
-					<div class="carousel-caption d-none d-md-block">
-						<h3 class="display-3">Hải Lăng về đêm</h3>
-					</div>
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-		</div>
-	</div>
-	<div class="posts mt-5">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4 text-center mt-4">
-						<img src="images/thanh-co-quang-tri.jpg" class="img-fluid" alt="thanh co quang tri">
-						<h3 class="display-5 mt-2">Thành cổ Quảng Trị</h3>
-						<p class="text-justify">Thành Cổ Quảng Trị nằm bên dòng sông Thạch Hãn, được biết đến qua cuộc chiến 81 ngày đêm giữ thành đầy khốc liệt trong lịch sử dân tộc. Năm 1994, Thành Cổ Quảng Trị được xếp vào danh mục những di tích đặc biệt quan trọng.</p>
-				</div>
-				<div class="col-sm-4 text-center mt-4">
-						<img src="images/cau-hien-luong.jpg" class="img-fluid" alt="hien luong ben hai">
-						<h3 class="display-5 mt-2">Cầu Hiền Lương - sông Bến Hải</h3>
-						<p class="text-justify">Cầu Hiền Lương nằm ngay gần Quốc lộ 1A, tại đây bạn sẽ được nghe hướng dẫn viên giới thiệu chi tiết về cây cầu đặc biệt này. Cầu Hiền Lương được tái hiện lại màu sơn 2 màu có ngăn cách ở giữa như trong thời kỳ chiến tranh Việt Nam.</p>
-				</div>
-				<div class="col-sm-4 text-center mt-4">
-						<img src="images/dia-dao-vinh-moc.png" class="img-fluid" alt="dia dao vinh moc">
-					<h3 class="display-5 mt-2">Địa đạo Vịnh Mốc</h3>
-					<p class="text-justify">Địa đạo Vịnh Mốc ở Quảng Trị còn gọi là Địa đạo Vĩnh Mốc. Đây là công trình biểu tượng của hệ thống làng hầm Vĩnh Linh được mệnh danh là lũy thép. Vịnh Mốc còn giữ nguyên vẽ hoang sơ của nông thôn Việt Nam trong những năm chiến tranh chống Mỹ. Dưới những bụi tre là địa đạo rộng lớn nơi sinh hoạt của quân và dân Quảng Trị.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<main>
-		<div class="container">
-				<div class="col-sm-12 mt-3">
-					<hr>
-				</div>
-				<div class="col-sm-12">
-					<h5 class="display-4 mt-3 text-center">Quảng Trị</h5>
-				</div>
-				<div class="col-sm-12 text-center">
-					<figure>
-						<img class="img-fluid mt-3 mb-3 mx-auto d-block" src="images/bando_quangtri.jpg" alt="quang tri">
-						<figcaption>Bản đồ tỉnh Quảng Trị</figcaption>
-					</figure>
-				</div>
-				<div class="col-sm-12 text-justify mt-3 mb-3">
-					<p>
-						Quảng Trị là một tỉnh nằm ở dải đất miền Trung Việt Nam, nơi chuyển tiếp giữa hai miền địa lý Bắc - Nam. Tọa độ địa lý tỉnh Quảng Trị ở vào vị trí từ 16°18' đến 17°10' vĩ độ Bắc, 106°32' đến 107°34' kinh độ Đông. Nằm cách thủ đô Hà Nội 593 km về phía Nam, cách thành phố Đà Nẵng 178 km về phía Bắc. Có vị trí địa lý:
-					</p>
-					<p>
-						Phía bắc giáp tỉnh Quảng Bình.
-						Phía nam giáp tỉnh Thừa Thiên Huế.
-						Phía tây giáp 2 tỉnh Savannakhet và Saravane của Cộng hòa Dân chủ Nhân dân Lào.
-						Phía Đông giáp biển Đông.
-						Với tọa độ địa lý này, Quảng Trị được tạo nên bởi một không gian lãnh thổ mang sắc thái khí hậu nhiệt đới ẩm, điển hình của vòng đai nội chí tuyến Bắc bán cầu và chịu ảnh hưởng rất lớn của biển Đông.
-					</p>
-					<p>
-						Các điểm cực của tỉnh Quảng Trị:
-						Điểm cực bắc tại: thôn Mạch Nước, xã Vĩnh Thái, huyện Vĩnh Linh.
-						Điểm cực nam tại: bản A Ngo, xã A Ngo, huyện Đa Krông.
-						Điểm cực đông tại: thôn Thâm Khê, xã Hải Khê, huyện Hải Lăng.
-						Điểm cực tây tại: đồn biên phòng Cù Bai, xã Hướng Lập, huyện Hướng Hóa.
-						Chiều ngang trung bình của tỉnh 63,9 km, (chiều ngang rộng nhất 75,4 km, chiều ngang hẹp nhất 52,5 km).
-					</p>
-					<p>
-						Tuy với một diện tích không rộng, người không đông nhưng do nằm ở vị trí chiến lược quan trọng nên Quảng Trị đã và đang giữ vai trò trọng yếu trong việc bảo vệ và khai thác biển Đông, giao lưu giữa hai miền Bắc - Nam của đất nước cũng như lưu thông thuận lợi với các nước phía tây bán đảo Đông dương, các nước khác trong khu vực Đông Nam Á và thế giới qua cửa khẩu Lao Bảo - hành lang quốc lộ số 9 ra cảng Cửa Việt.
-					</p>	
-			</div>
-		</div>
-	</main>
-	<div class="feedback" id="feedback">
-		<div class="container">
-			<div class="row text-center">
-				<div class="col-sm-12 mt-3 m-3">
-					<hr>
-				</div>
-				<div class="col-sm-12">
-					<h3 class="text-center">
-						Phản hồi
-					</h3>
-				</div>	
-				<div class="col-sm-12">
-					<!-- facebook comment -->
-					<div class="fb-comments" data-href="https://phuoclethanh.github.io/" data-numposts="5" data-width=""></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-10 mt-3 mb-3">
-					<p class="text-center mb-0">Copyright © 2021. All Rights Reserved</p>
-				</div>
-				<div class="col-2">
-					<a href="https://www.facebook.com/thanhphuoc.le.23/" target="_blank" class="connect_link">
-						<img src="images/facebook.png" alt="facebook">
-					</a>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<script>!function(s,u,b,i,z){var o,t,r,y;s[i]||(s._sbzaccid=z,s[i]=function(){s[i].q.push(arguments)},s[i].q=[],s[i]("setAccount",z),r=["widget.subiz.net","storage.googleapis"+(t=".com"),"app.sbz.workers.dev",i+"a"+(o=function(k,t){var n=t<=6?5:o(k,t-1)+o(k,t-3);return k!==t?n:n.toString(32)})(20,20)+t,i+"b"+o(30,30)+t,i+"c"+o(40,40)+t],(y=function(k){var t,n;s._subiz_init_2094850928430||r[k]&&(t=u.createElement(b),n=u.getElementsByTagName(b)[0],t.async=1,t.src="https://"+r[k]+"/sbz/app.js?accid="+z,n.parentNode.insertBefore(t,n),setTimeout(y,2e3,k+1))})(0))}(window,document,"script","subiz", "acrezqymcpyvaeigasod")</script>
+<body>
+    <header>
+        <div class="logo"><img src="images/logo.png" alt="logo" id="logo"></div>
+        <h1>My News <img src="images/search-icon.png" alt="search" id="search"></h1>   
+    </header>
+    <div id="fieldbox">
+        <div class="searchbox fieldsearch">
+            <label for="fsearch">Keywords</label>
+            <input type="text" id="fsearch" name="fsearch" placeholder="Enter keywords..">
+            <button type="button" id="btn-search">Search</button>
+            <button type="button" id="btn-tools">Tools</button>
+            <img src="images/close-icon.png" id="close">
+            <br>
+            <select name="time" id="time">
+                <option value="0">Any time</option>
+                <option value="1">Past our</option>
+                <option value="2">Past 24 hours</option>
+                <option value="3">Past week</option>
+                <option value="4">Past month</option>
+                <option value="5">Past year</option>
+            </select>
+            <select name="language" id="language">
+                <option value="0">Select language</option>
+                <option value="1">German</option>
+                <option value="2">English</option>
+                <option value="3">Spanish</option>
+                <option value="4">Italian</option>
+                <option value="5">Japanese</option>
+            </select>
+        </div>
+        <div class="background fieldsearch"></div>
+    </div>
+    <div class="loader">
+        <img class="rotatory" src="images/loading.png">
+        <div class="background"></div>  
+    </div>
+    <main>
+    </main>
+    <footer>
+        <p>Author: PhuocLT</p>
+        <p>lethanhphuocdktd@gmail.com</p>
+      </footer>
 </body>
 </html>
